syntax = "proto3";

package cosmos.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "sf/cosmos/type/v1/block.proto";

message BlockStats {
    uint64 block_height = 1;
    string block_hash = 2;
    google.protobuf.Timestamp block_time = 3;
    string block_proposer = 4;

    int64 parent_height = 5;
    string parent_hash = 6;

    uint64 num_txs = 7;
    sf.cosmos.type.v2.Block block = 8;

}
